interface/interface-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interface-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interface
  template:
    metadata:
      labels:
        app: interface
    spec:
      containers:
      - name: interface-container
        image: ramibouk/kube-project-interface:latest
        ports:
        - containerPort: 5000
