interface/interface-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interface-service
spec:
  selector:
    app: interface
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
